[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/entities/lasereffects/LaserEffects.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/bits/DamageIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/entities/enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://scenes/entities/explosions/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui-game/HealthBar2D.tscn" type="PackedScene" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 4 )

[sub_resource type="DynamicFont" id=18]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Enemy" type="Spatial" groups=["enemies"]]
script = ExtResource( 4 )
auto_kill_percentage = 0.15

[node name="Tween" type="Tween" parent="."]

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ShipDetection" type="Area" parent="." groups=["enemy_shipdetection"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="ShipDetection"]
shape = SubResource( 1 )

[node name="HealthBar2D" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Explosion" parent="." instance=ExtResource( 5 )]

[node name="DamageIndicator" parent="." instance=ExtResource( 2 )]
visible = false
modulate = Color( 0, 1, 1, 1 )
font = SubResource( 18 )

[node name="LaserEffects" parent="." instance=ExtResource( 1 )]
ship = NodePath("..")

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="area_entered" from="ShipDetection" to="." method="_on_ShipDetection_area_entered"]
[connection signal="area_exited" from="ShipDetection" to="." method="_on_ShipDetection_area_exited"]
[connection signal="exploded" from="Explosion" to="." method="_on_Explosion_exploded"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
